End Of Section 12

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
  "ConnectionStrings": {
   "DefaultConnection":"Data Source=reactivity.db"
-
-  }
+  },
+  "TokenKey":"a much longer and event more super secret key that should be long enough for the latest version of this package"
 }
