--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "cloudinary":{
+    "CloudName": "dkhj9nflm",
+    "ApiKey": "211527574944433",
+    "ApiSecret": "YaWM4D-0V9VKoe53u1t8YsH382Y"
+
+  }
+
 }
