--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.2.14",
     "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.6",
+    "@types/react-infinite-scroller": "^1.2.3",
     "axios": "^1.4.0",
     "date-fns": "^2.16.1",
     "formik": "^2.4.2",
@@ -23,6 +24,7 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-infinite-scroller": "^1.2.6",
     "react-jewish-datepicker": "^2.0.10",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
