FB Loging  not complete

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,11 +6,17 @@
     }
   },
   "AllowedHosts": "*",
+  "Facebook":{
+    "AppId":"337877952030517",
+    "ApiSecret": "fc19b7ad2fcba41afaf2f5e47761b3d1"
+
+  },
+  
   "cloudinary":{
     "CloudName": "dkhj9nflm",
     "ApiKey": "211527574944433",
     "ApiSecret": "YaWM4D-0V9VKoe53u1t8YsH382Y"
-
   }
+
 
 }
