--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -3,10 +3,10 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Information"
-    }
+    } 
   },
  "ConnectionStrings": {
-  "DefaultConnection":"Data Source=reactivity.db"
+  "DefaultConnection": "Server=localhost; Port=5432; User Id=admin; Password=secret; Database=reactivities;"
   },
   "TokenKey":"a much longer and event more super secret key that should be long enough for the latest version of this package"
 }
