--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -11,6 +11,10 @@
     "ApiKey": "211527574944433",
     "ApiSecret": "YaWM4D-0V9VKoe53u1t8YsH382Y"
 
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=host.docker.internal; Port=5432; User Id=admin; Password=secret; Database=reactivities;"
+    },
+    "TokenKey":"a much longer and event more super secret key that should be long enough for the latest version of this package"
 
 }
