--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -15,6 +15,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=host.docker.internal; Port=5432; User Id=admin; Password=secret; Database=reactivities;"
     },
-    "TokenKey":"a much longer and event more super secret key that should be long enough for the latest version of this package"
-
+    "TokenKey":"a much longer and event more super secret key that should be long enough for the latest version of this package to the token key"
 }
+
