--- a/fly.toml
+++ b/fly.toml
@@ -11,7 +11,7 @@ primary_region = "cdg"
 
 [env]
   ASPNETCORE_URLS="http://+:8080"
-  Cloudinary__CloudName="dkhj9nflm"
+  Cloudinary__Cloudname="dkhj9nflm"
   Cloudinary__ApiKey="211527574944433"
 
 
