FB Login Complete1

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,15 +6,17 @@
     }
   },
   "AllowedHosts": "*",
-  "cloudinary":{
+  "Facebook": {
+    "AppId": "221460500899348",
+    "ApiSecret": "ae4a221128a0f6445b24a511a57b4936"
+  },
+  "cloudinary": {
     "CloudName": "dkhj9nflm",
     "ApiKey": "211527574944433",
     "ApiSecret": "YaWM4D-0V9VKoe53u1t8YsH382Y"
-
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=host.docker.internal; Port=5432; User Id=admin; Password=secret; Database=reactivities;"
-    },
-    "TokenKey":"a much longer and event more super secret key that should be long enough for the latest version of this package to the token key"
+  },
+  "TokenKey": "a much longer and event more super secret key that should be long enough for the latest version of this package to the token key"
 }
-
