Update connection string to Azure SQL and add Dockerfiles for deployment

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -15,8 +15,8 @@
     "ApiKey": "211527574944433",
     "ApiSecret": "YaWM4D-0V9VKoe53u1t8YsH382Y"
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=Reactivities;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
+ "ConnectionStrings": {
+  "DefaultConnection": "Server=reactivities-sqlserver1.database.windows.net;Database=reactivitiesdb;User Id=tomeradmin;Password=YourStrongP@ssword123;TrustServerCertificate=True;"
+},
   "TokenKey": "a much longer and event more super secret key that should be long enough for the latest version of this package to the token key"
 }
