--- a/client-app/package.json
+++ b/client-app/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@greatsumini/react-facebook-login": "^3.3.3",
     "@microsoft/signalr": "^7.0.10",
-    "@types/node": "^ 20.5.9",
+    "@types/node": "^20.5.9",
     "@types/react": "^18.2.14",
     "@types/react-calendar": "^4.1.0",
     "@types/react-dom": "^18.2.6",
@@ -35,8 +35,8 @@
     "start": "vite",
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prod": "npm run build && npm run preview"
   },
   "eslintConfig": {
     "extends": [
