Fix VITE_API_URL with correct Azure hostname

--- a/client-app/.env.production
+++ b/client-app/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://reactivities-api-v3.northeurope.azurecontainerapps.io
+VITE_API_URL=https://reactivities-api-v3.ashycliff-e4655cc3.northeurope.azurecontainerapps.io
 VITE_CHAT_URL=/chat
