--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -16,7 +16,7 @@
     "ApiSecret": "YaWM4D-0V9VKoe53u1t8YsH382Y"
   },
  "ConnectionStrings": {
-  "DefaultConnection": "Server=reactivities-sqlserver1.database.windows.net;Database=reactivitiesdb;User Id=tomeradmin;Password=YourStrongP@ssword123;TrustServerCertificate=True;"
+  "DefaultConnection": "Server=reactivities-sqlserver1.database.windows.net;Database=reactivitiesdb;User Id=TomerAdmin;Password=Change12!;TrustServerCertificate=True;"
 },
   "TokenKey": "a much longer and event more super secret key that should be long enough for the latest version of this package to the token key"
 }
